--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "browser-router": "^0.2.0",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -25,8 +26,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
