added products router, error handling middle ware in index.js root file, fixed some syntax errors in seed data and db-index

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "postinstall": "npm run client:build",
     "client:dev": "react-scripts start",
@@ -19,11 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcrypt": "^5.1.0",
     "browser-router": "^0.2.0",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "^24.9.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
     "react": "^18.2.0",
