--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.3.0-alpha1",
+    "bootstrap-icons": "^1.10.3",
     "browser-router": "^0.2.0",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
